ProdIND/ProdPrograms/force-app/main/default/objects/Low_Payload_Response__e/Low_Payload_Response__e.object-meta.xml
<CustomObject>
    <description>This is created for Low Payload ASync Response. The name has been changed from the previous Name for Recognition. Need to change in any code if already used.</description>
    <label>Low Payload Response</label>
    <pluralLabel>Low Payload Responses</pluralLabel>
</CustomObject>