ProdIND/ProdPrograms/force-app/main/default/objects/Low_Payload_Response__e/fields/Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Reference_Id__c</fullName>
    <description>Integration Log Object record id or any record id if needed for further processing</description>
    <label>Reference Id</label>
    <length>40</length>
    <type>Text</type>
</CustomField>