ProdIND/ProdPrograms/force-app/main/default/objects/Low_Payload_Response__e/fields/Response_Ext__c.field-meta.xml
<CustomField>
    <fullName>Response_Ext__c</fullName>
    <description>This is created to accommodate longer Response (if any) in Response Field</description>
    <label>Response Ext</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>