ProdIND/ProdPrograms/force-app/main/default/objects/Low_Payload_Response__e/fields/SVC_Name__c.field-meta.xml
<CustomField>
    <fullName>SVC_Name__c</fullName>
    <description>Integration Name for which PE is published</description>
    <label>SVC Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>